[project]
name = "alliance"
version = "0.1.0"
description = "Alliance VLSI CAD Tools (LIP6)"
authors = [
    {name = "Jean-Paul Chaput", email = ""},
    {name = "Naohiko Shimizu", email = ""},
]
dependencies = ["dunamai>=1.22.0", "meson>=1.6.0", "ninja>=1.11.1.1"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "GPL"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
