beh_includes = include_directories(
    '.',
)

mbk_includes = project_dict['mbk_includes']
log_includes = project_dict['log_includes']

libbeh = shared_library(
    'beh',
	'cst_CrtInterSet.c',
	'beh_frebiabl.c',
	'beh_rmvbeout.c',
	'cst_IsInSetElt.c',
	'cst_CrtUnionSet.c',
	'beh_expstable.c',
	'beh_delbepor.c',
	'beh_frebereg.c',
	'beh_addbeout.c',
	'beh_frebebus.c',
	'beh_rmvbefig.c',
	'beh_rmvbemsg.c',
	'beh_rplstable.c',
	'beh_addbefig.c',
	'beh_addbemsg.c',
	'beh_delbiabl.c',
	'cst_error.c',
	'beh_frebepor.c',
	'beh_delbereg.c',
	'beh_expdelayed.c',
	'beh_delbequad.c',
	'beh_delbebus.c',
	'cst_GetLastElt.c',
	'beh_apdberin.c',
	'beh_delbeder.c',
	'beh_frebegen.c',
	'cst_GetFirstElt.c',
	'beh_apdbeaux.c',
	'cst_SetCmp.c',
	'beh_addbeaux.c',
	'beh_delbegen.c',
	'beh_frebeder.c',
	'beh_rmvbeaux.c',
	'beh_addbebux.c',
	'beh_addberin.c',
	'beh_vhdlname.c',
	'beh_rmvbebux.c',
	'beh_addbinod.c',
	'beh_rmvberin.c',
	'beh_frebemsg.c',
	'beh_frebefig.c',
	'cst_GetPrevElt.c',
	'beh_message.c',
	'beh_rmvbepor.c',
	'beh_delbeout.c',
	'beh_addbepor.c',
	'cst_RemSetElt.c',
	'beh_globals.c',
	'beh_delbemsg.c',
	'beh_addbiabl.c',
	'beh_delbefig.c',
	'beh_vhvector.c',
	'beh_getvers.c',
	'cst_AddSetElt.c',
	'beh_addbebus.c',
	'beh_frebeout.c',
	'beh_rmvbereg.c',
	'cst_globals.c',
	'beh_rmvbebus.c',
	'cst_GetNextElt.c',
	'beh_addbereg.c',
	'beh_rpldelayed.c',
	'beh_rmvbeder.c',
	'beh_frebeaux.c',
	'beh_addbeder.c',
	'beh_getgenva.c',
	'cst_DisjunctSet.c',
	'beh_toolbug.c',
	'beh_frebinod.c',
	'beh_frebebux.c',
	'beh_freberin.c',
	'beh_dict.c',
	'beh_rmvbegen.c',
	'beh_error.c',
	'beh_delbeaux.c',
	'beh_addbegen.c',
	'beh_delbinod.c',
	'beh_addbequad.c',
	'cst_CrtCompSet.c',
	'beh_delbebux.c',
	'beh_delberin.c',
	
    dependencies: [],
    link_with: [],
    include_directories: [
        beh_includes,
        mbk_includes,
		log_includes
    ], 
    install: true,
)

project_dict += {'libbeh': libbeh}
