dreal_includes = include_directories(
    '.',
)

mbk_includes = project_dict['mbk_includes']
rds_includes = project_dict['rds_includes']

libmbk = project_dict['libmbk']
librds = project_dict['librds']

dreal = executable(
    'dreal',
	'GME_edit.c',
	'GMV_map.c',
	'GMS_dialog.c',
	'GMF_menu.c',
	'GTB_pixmap.c',
	'GMT_tools.c',
	'GMX_dialog.c',
	'GMH_menu.c',
	'GMF_dialog.c',
	'dreal.c',
	'GTB_panel.c',
	'GMT_message.c',
	'GRD_search.c',
	'GMT_panel.c',
	'GMC_create.c',
	'GMS_setup.c',
	'GRD_select.c',
	'GMH_panel.c',
	'GMX_color.c',
	'GMT_menu.c',
	'GMX_menu.c',
	'GMX_cursor.c',
	'GMX_motif.c',
	'GMV_panel.c',
	'GMC_panel.c',
	'GME_select.c',
	'GME_search.c',
	'GMX_event.c',
	'GMT_dialog.c',
	'GMX_message.c',
	'GRD_error.c',
	'GMV_menu.c',
	'GRD_undo.c',
	'GSB_share.c',
	'GTB_icon.c',
	'GMS_menu.c',
	'GMH_help.c',
	'GME_message.c',
	'GSB_parse.c',
	'GME_dialog.c',
	'GMX_grid.c',
	'GTB_menu.c',
	'GMX_view.c',
	'GRD_window.c',
	'GMC_message.c',
	'GMV_message.c',
	'GMX_icon.c',
	'GTB_dialog.c',
	'GMV_view.c',
	'GMS_panel.c',
	'GMF_panel.c',
	'GME_menu.c',
	'GMX_panel.c',
	'GME_modify.c',
	'GSB_error.c',
	'GMV_dialog.c',
	'GME_panel.c',
	'GMC_menu.c',
	'GMF_file.c',
	'GMC_dialog.c',
	'GRD_rds.c',
	'GTB_cursor.c',
	'GMX_graphic.c',
	
    dependencies: [x11_dep, motif_dep, xt_dep],
    link_with: [libmbk, librds],
    include_directories: [
		dreal_includes,
		mbk_includes,
		rds_includes
	],
    install: true,
)
