fvh_includes = include_directories(
    '.',
)

fvh = shared_library(
    'fvh',
	'fbh_rin.c',
	'fbh_typ.c',
	'fbh_del.c',
	'fbh_fre.c',
	'fbh_rmv.c',
	'fbh_view.c',
	'fbh_uti.c',
	'fbl_drive.c',
	'fbh_add.c',
	'fbl_bspec.c',
	'fvhparse.c',
	'fvhdrive.c',
	'fbh_env.c',
	'fvhfbh2fsm.c',
	'fvherror.c',
	'fbl_util.c',
	
    dependencies: [],
    link_with: [],
    include_directories: fvh_includes,
    install: true,
)
