genpat_includes = include_directories(
    '.',
)

genpat = shared_library(
    'genpat',
	'SETTUNIT.c',
	'ARRAY.c',
	'AFFECT.c',
	'INIT.c',
	'SAV_GEN.c',
	'libpat_l.c',
	'CONV.c',
	'LABEL.c',
	'DECLAR.c',
	'DEF_GEN.c',
	'SAVE.c',
	'GETCPAT.c',
	
    dependencies: [],
    link_with: [],
    include_directories: genpat_includes,
    install: true,
)
