graal_includes = include_directories(
    '.',
)

graal = shared_library(
    'graal',
	'GRM_window.c',
	'GME_edit.c',
	'GMV_map.c',
	'GMS_dialog.c',
	'GMF_menu.c',
	'GTB_pixmap.c',
	'GMT_tools.c',
	'GMX_dialog.c',
	'GMH_menu.c',
	'GMF_dialog.c',
	'GTB_panel.c',
	'GMT_message.c',
	'GMT_druc.c',
	'GMT_panel.c',
	'GMC_create.c',
	'GMS_setup.c',
	'GMH_panel.c',
	'GMX_color.c',
	'GMT_menu.c',
	'GMX_menu.c',
	'GMX_cursor.c',
	'GMX_motif.c',
	'GMV_panel.c',
	'GMC_panel.c',
	'GME_select.c',
	'GME_search.c',
	'graal.c',
	'GRM_error.c',
	'GMX_event.c',
	'GMT_dialog.c',
	'GMX_message.c',
	'GRM_mbkrds.c',
	'GMV_menu.c',
	'GRM_connector.c',
	'GSB_share.c',
	'GTB_icon.c',
	'GMS_menu.c',
	'GRM_search.c',
	'GRM_undo.c',
	'GMH_help.c',
	'GME_message.c',
	'GSB_parse.c',
	'GME_dialog.c',
	'GMX_grid.c',
	'GTB_menu.c',
	'GRM_select.c',
	'GMX_view.c',
	'GMC_message.c',
	'GMV_message.c',
	'GMX_icon.c',
	'GTB_dialog.c',
	'GMV_view.c',
	'GMS_panel.c',
	'GMF_panel.c',
	'GME_menu.c',
	'GMX_panel.c',
	'GME_modify.c',
	'GRM_equi.c',
	'GRM_peek.c',
	'GSB_error.c',
	'GMV_dialog.c',
	'GME_panel.c',
	'GMC_menu.c',
	'GMF_file.c',
	'GMC_dialog.c',
	'GTB_cursor.c',
	'GMX_graphic.c',
	'GRM_druc.c',
	
    dependencies: [],
    link_with: [],
    include_directories: graal_includes,
    install: true,
)
